--- a/for_gallery.ipynb
+++ b/for_gallery.ipynb
@@ -2,46 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "63e3d9e1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.10.0</span>\n",
-       "\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m10.0\u001b[0m\n",
-       "\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from manim import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "e4ba2c91-b12e-4d60-98e6-7e51046d5745",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import shutil\n",
+    "import time\n",
     "\n",
     "def latest_file(path: Path, pattern: str = \"*\"):\n",
     "    files = path.glob(pattern)\n",
     "    return max(files, key=lambda x: x.stat().st_ctime)\n",
     "\n",
     "def save_image(name):\n",
-    "    from_file = latest_file(Path(\"./media/images/mobject-gallery\"))\n",
+    "    #from_file = latest_file(Path(\"./media/images/mobject-gallery\"))\n",
+    "    from_file = Path(\"./media/images/mobject-gallery/Example_ManimCE_v0.10.0.png\")\n",
     "    to_file = Path.cwd() / name\n",
     "    shutil.copy(from_file, to_file)\n",
     "    \n",
@@ -50,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "3d228c15",
    "metadata": {},
    "outputs": [
@@ -73,18 +59,26 @@
     "        d = Dot(color = YELLOW)\n",
     "        self.add(d)\n",
     "###******        \n",
-    "category = \"basics\"\n",
+    "category = \"basics01\"\n",
     "image_file_name = \"dot.png\"\n",
-    "snippet = \"d = Dot(color = YELLOW)\"\n",
-    "###*****\n",
-    "image_full_name = category + \"_\" + image_file_name\n",
-    "save_image(image_full_name)\n",
-    "name_snippet_pairs[image_full_name] = snippet\n"
+    "snippet = \"d = Dot(color = YELLOW)\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
+   "id": "fb6da625-026b-45d0-a22c-8a69c0467962",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_full_name = category + \"_\" + image_file_name\n",
+    "save_image(image_full_name)\n",
+    "name_snippet_pairs[image_full_name] = snippet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "ad594e35",
    "metadata": {},
    "outputs": [
@@ -108,18 +102,26 @@
     "        mob.scale(0.1)\n",
     "        self.camera.frame.scale(1/25)\n",
     "###******        \n",
-    "category = \"basics\"\n",
+    "category = \"basics02\"\n",
     "image_file_name = \"circle.png\"\n",
-    "snippet = \"circle = Circle(color= YELLOW)\"\n",
-    "###*****\n",
-    "image_full_name = category + \"_\" + image_file_name\n",
-    "save_image(image_full_name)\n",
-    "name_snippet_pairs[image_full_name] = snippet\n"
+    "snippet = \"circle = Circle(color= YELLOW)\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
+   "id": "db6d50e4-9da3-4a96-96fd-1c6d88d0e44d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_full_name = category + \"_\" + image_file_name\n",
+    "save_image(image_full_name)\n",
+    "name_snippet_pairs[image_full_name] = snippet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "78d4b603",
    "metadata": {},
    "outputs": [
@@ -143,18 +145,26 @@
     "        mob.scale(0.1)\n",
     "        self.camera.frame.scale(1/25)\n",
     "###******        \n",
-    "category = \"basics\"\n",
+    "category = \"basics03\"\n",
     "image_file_name = \"square.png\"\n",
-    "snippet = \"square = Square(color= YELLOW)\"\n",
-    "###*****\n",
-    "image_full_name = category + \"_\" + image_file_name\n",
-    "save_image(image_full_name)\n",
-    "name_snippet_pairs[image_full_name] = snippet\n"
+    "snippet = \"square = Square(color= YELLOW)\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
+   "id": "71a9366d-cf68-4d7b-b647-d34d98799edd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_full_name = category + \"_\" + image_file_name\n",
+    "save_image(image_full_name)\n",
+    "name_snippet_pairs[image_full_name] = snippet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "bc54081a",
    "metadata": {},
    "outputs": [
@@ -178,18 +188,26 @@
     "        mob.scale(0.1)\n",
     "        self.camera.frame.scale(1/25)\n",
     "###******        \n",
-    "category = \"basics\"\n",
+    "category = \"basics04\"\n",
     "image_file_name = \"line.png\"\n",
-    "snippet = \"line = Line(color= YELLOW)\"\n",
-    "###*****\n",
-    "image_full_name = category + \"_\" + image_file_name\n",
-    "save_image(image_full_name)\n",
-    "name_snippet_pairs[image_full_name] = snippet\n"
+    "snippet = \"line = Line(color= YELLOW)\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
+   "id": "0b34e199-d4d7-488f-b082-c3079505abf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_full_name = category + \"_\" + image_file_name\n",
+    "save_image(image_full_name)\n",
+    "name_snippet_pairs[image_full_name] = snippet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "ca89b62d",
    "metadata": {},
    "outputs": [
@@ -214,10 +232,18 @@
     "        mob.scale(0.1)\n",
     "        self.camera.frame.scale(1/25)\n",
     "###******        \n",
-    "category = \"basics\"\n",
+    "category = \"basics05\"\n",
     "image_file_name = \"star.png\"\n",
-    "snippet = \"star = Star(color = YELLOW)\"\n",
-    "###*****\n",
+    "snippet = \"star = Star(color = YELLOW)\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "919d96ef-f910-4289-a7ed-19b54b765d26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "image_full_name = category + \"_\" + image_file_name\n",
     "save_image(image_full_name)\n",
     "name_snippet_pairs[image_full_name] = snippet"
@@ -225,21 +251,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "e32bba63-afe6-4857-bffa-24240c9198cb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'basics_dot.png': 'd = Dot(color = YELLOW)',\n",
-       " 'basics_circle.png': 'circle = Circle(color= YELLOW)',\n",
-       " 'basics_square.png': 'square = Square(color= YELLOW)',\n",
-       " 'basics_line.png': 'line = Line(color= YELLOW)',\n",
-       " 'basics_star.png': 'star = Star(color = YELLOW)'}"
+       "{'basics01_dot.png': 'd = Dot(color = YELLOW)',\n",
+       " 'basics02_circle.png': 'circle = Circle(color= YELLOW)',\n",
+       " 'basics03_square.png': 'square = Square(color= YELLOW)',\n",
+       " 'basics04_line.png': 'line = Line(color= YELLOW)',\n",
+       " 'basics05_star.png': 'star = Star(color = YELLOW)'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "id": "ab1b24cd-ce2a-4a6c-9e8f-6718dca88478",
    "metadata": {},
    "outputs": [],
@@ -260,6 +286,14 @@
     "with open('name_snippet_pairs.json', 'w') as fp:\n",
     "    json.dump(name_snippet_pairs, fp)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f89ff64-1c1e-4db7-a4bd-47b2ac87e3a6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
