--- a/Mobjects_Basics.ipynb
+++ b/Mobjects_Basics.ipynb
@@ -2,28 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "63e3d9e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from manim import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "e4ba2c91-b12e-4d60-98e6-7e51046d5745",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.10.0</span>\n",
+       "\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m10.0\u001b[0m\n",
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "from manim import *\n",
     "from pathlib import Path\n",
     "import shutil\n",
     "import time\n",
+    "import json\n",
     "\n",
-    "def latest_file(path: Path, pattern: str = \"*\"):\n",
-    "    files = path.glob(pattern)\n",
-    "    return max(files, key=lambda x: x.stat().st_ctime)\n",
+    "params = \" -v WARNING -r 80,40 -s  --disable_caching Example\"\n",
+    "\n",
+    "#def latest_file(path: Path, pattern: str = \"*\"):\n",
+    "#   files = path.glob(pattern)\n",
+    "#   return max(files, key=lambda x: x.stat().st_ctime)\n",
     "\n",
     "def save_image(name):\n",
     "    #from_file = latest_file(Path(\"./media/images/mobject-gallery\"))\n",
@@ -35,8 +45,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4863ffad-8ac7-4370-accd-a089ad2f02ff",
+   "metadata": {},
+   "source": [
+    "# ----------------"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "3d228c15",
    "metadata": {},
    "outputs": [
@@ -52,7 +70,7 @@
     }
    ],
    "source": [
-    "%%manim -v WARNING -r 80,40 -s  --disable_caching Example\n",
+    "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
     "        self.camera.frame.scale(1/20)\n",
@@ -66,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "fb6da625-026b-45d0-a22c-8a69c0467962",
    "metadata": {},
    "outputs": [],
@@ -77,8 +95,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "518357a2-5d24-4ce2-bb77-b180b0da3ea5",
+   "metadata": {},
+   "source": [
+    "# ----------------"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "ad594e35",
    "metadata": {},
    "outputs": [
@@ -94,7 +120,7 @@
     }
    ],
    "source": [
-    "%%manim -v WARNING -r 80,40 -s  --disable_caching Example\n",
+    "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
     "        mob= Circle(color= YELLOW)\n",
@@ -109,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "db6d50e4-9da3-4a96-96fd-1c6d88d0e44d",
    "metadata": {},
    "outputs": [],
@@ -120,8 +146,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1f8f6f69-74c4-42bd-9672-f54c6aff05e3",
+   "metadata": {},
+   "source": [
+    "# ----------------\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "78d4b603",
    "metadata": {},
    "outputs": [
@@ -137,7 +171,7 @@
     }
    ],
    "source": [
-    "%%manim -v WARNING -r 80,40 -s  --disable_caching Example\n",
+    "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
     "        mob= Square(color= YELLOW)\n",
@@ -152,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "71a9366d-cf68-4d7b-b647-d34d98799edd",
    "metadata": {},
    "outputs": [],
@@ -163,8 +197,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed311019-e6bd-4e3d-8626-aac82ba3dddf",
+   "metadata": {},
+   "source": [
+    "# ----------------"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "bc54081a",
    "metadata": {},
    "outputs": [
@@ -180,7 +222,7 @@
     }
    ],
    "source": [
-    "%%manim -v WARNING -r 80,40 -s  --disable_caching Example\n",
+    "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
     "        mob = Line(color= YELLOW)\n",
@@ -195,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "0b34e199-d4d7-488f-b082-c3079505abf1",
    "metadata": {},
    "outputs": [],
@@ -206,8 +248,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "32ff193f-16d1-4e36-9184-bbb763a27d00",
+   "metadata": {},
+   "source": [
+    "# ----------------"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "ca89b62d",
    "metadata": {},
    "outputs": [
@@ -223,7 +273,7 @@
     }
    ],
    "source": [
-    "%%manim -v WARNING -r 80,40 -s  --disable_caching Example\n",
+    "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
     "        mob= Star(color= YELLOW)\n",
@@ -239,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "id": "919d96ef-f910-4289-a7ed-19b54b765d26",
    "metadata": {},
    "outputs": [],
@@ -250,8 +300,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2ee59eea-27a8-4de3-a260-0c5af3b0e37b",
+   "metadata": {},
+   "source": [
+    "# ----------------"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "id": "e32bba63-afe6-4857-bffa-24240c9198cb",
    "metadata": {},
    "outputs": [
@@ -265,7 +323,7 @@
        " 'basics05_star.png': 'star = Star(color = YELLOW)'}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,24 +334,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "id": "ab1b24cd-ce2a-4a6c-9e8f-6718dca88478",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "\n",
     "with open('name_snippet_pairs.json', 'w') as fp:\n",
     "    json.dump(name_snippet_pairs, fp)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f89ff64-1c1e-4db7-a4bd-47b2ac87e3a6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
