--- a/Mobjects_Basics.ipynb
+++ b/Mobjects_Basics.ipynb
@@ -172,7 +172,7 @@
     "###******        \n",
     "category = \"basics\"\n",
     "image_file_name = \"Ellipse.png\"\n",
-    "snippet = \"star = Ellipse(color = YELLOW)\"\n",
+    "snippet = \"mob = Ellipse(color = YELLOW)\"\n",
     "image_full_name = category + \"_\" + image_file_name\n",
     "name_snippet_pairs[image_full_name] = snippet"
    ]
@@ -273,7 +273,7 @@
     "###******        \n",
     "category = \"basics\"\n",
     "image_file_name = \"Triangle.png\"\n",
-    "snippet = \"star = Triangle(color = YELLOW)\"\n",
+    "snippet = \"mob = Triangle(color = YELLOW)\"\n",
     "image_full_name = category + \"_\" + image_file_name\n",
     "name_snippet_pairs[image_full_name] = snippet"
    ]
@@ -338,7 +338,7 @@
     "###******        \n",
     "category = \"basics\"\n",
     "image_file_name = \"DashedLine.png\"\n",
-    "snippet = \"line = DashedLine(color= YELLOW)\"\n",
+    "snippet = \"mob = DashedLine(color= YELLOW)\"\n",
     "image_full_name = category + \"_\" + image_file_name\n",
     "name_snippet_pairs[image_full_name] = snippet"
    ]
