--- a/Mobjects_Basics.ipynb
+++ b/Mobjects_Basics.ipynb
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 51,
    "id": "7dc0296a-ac01-4e2e-940b-71c82a5ffb77",
    "metadata": {},
    "outputs": [
@@ -658,7 +658,7 @@
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
-      "[NbConvertApp] Writing 12807 bytes to Mobjects_Basics.md\n"
+      "[NbConvertApp] Writing 13895 bytes to Mobjects_Basics.md\n"
      ]
     }
    ],
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 52,
    "id": "bda246f2-9afc-45fc-b3e6-4745465d5f4d",
    "metadata": {},
    "outputs": [],
@@ -678,18 +678,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "id": "9d624a60-fd80-4156-a23f-ebb8203f3d59",
    "metadata": {},
    "outputs": [],
    "source": [
     "base_directory = Path.cwd() / \"Mobjects_Basics_files\"\n",
+    "target_directory = Path.cwd() / \"images\"\n",
     "import os\n",
     "paths = sorted(Path(base_directory).iterdir(), key=os.path.getmtime)\n",
     "dest_names = list(name_snippet_pairs.keys())\n",
     "new_keys = []\n",
     "for num, (p,des) in enumerate(zip(paths,dest_names)):\n",
-    "    to_path = Path.cwd() /  f\"image{num:03}{des}\"   \n",
+    "    to_path = target_directory /  f\"image{num:03}{des}\"   \n",
     "    shutil.copy(p,  to_path)\n",
     "#    print(\"done\", to_path.name)\n",
     "    new_keys.append(to_path.name)"
@@ -697,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 55,
    "id": "2c4fb21e-b9f8-4c2c-838d-3da43598bde3",
    "metadata": {},
    "outputs": [],
@@ -707,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 56,
    "id": "e32bba63-afe6-4857-bffa-24240c9198cb",
    "metadata": {},
    "outputs": [],
@@ -720,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 57,
    "id": "ba500ec7-c25d-4196-ac36-f7d6c3c69f32",
    "metadata": {},
    "outputs": [
@@ -746,7 +747,7 @@
        " 'image016basics_Text.png': 'mob = Text(\"Hello\", color=BLUE)'}"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 58,
    "id": "ab1b24cd-ce2a-4a6c-9e8f-6718dca88478",
    "metadata": {},
    "outputs": [],
@@ -768,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 59,
    "id": "3f2e3684-d9ee-4433-af9d-717eeb711ab5",
    "metadata": {},
    "outputs": [],
@@ -779,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edb67dc0-0558-4af2-bcf3-8ff62f131827",
+   "id": "ea5ca212-6c22-466f-9c08-18e90d4c31a6",
    "metadata": {},
    "outputs": [],
    "source": []
