fixed string issue

--- a/Mobjects_Basics.ipynb
+++ b/Mobjects_Basics.ipynb
@@ -708,20 +708,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 68,
    "id": "e32bba63-afe6-4857-bffa-24240c9198cb",
    "metadata": {},
    "outputs": [],
    "source": [
     "new_name_snippet_pairs ={} \n",
     "new_values = list(name_snippet_pairs.values())\n",
+    "#new_new_values = []\n",
+    "#for val in new_values:\n",
+    "#    val= val.replace('\"', \"'\")\n",
+    "#    print(val)\n",
     "for key, value in zip(new_keys,new_values):\n",
     "    new_name_snippet_pairs[key]=value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 69,
    "id": "ba500ec7-c25d-4196-ac36-f7d6c3c69f32",
    "metadata": {},
    "outputs": [
@@ -747,7 +751,7 @@
        " 'image016basics_Text.png': 'mob = Text(\"Hello\", color=BLUE)'}"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 70,
    "id": "ab1b24cd-ce2a-4a6c-9e8f-6718dca88478",
    "metadata": {},
    "outputs": [],
