--- a/Mobjects_Text.ipynb
+++ b/Mobjects_Text.ipynb
@@ -2,26 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "e4ba2c91-b12e-4d60-98e6-7e51046d5745",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.10.0</span>\n",
-       "\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m10.0\u001b[0m\n",
-       "\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from manim import *\n",
     "from pathlib import Path\n",
@@ -46,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "0fd61567-423c-4c00-a242-1ab6c8dd9787",
    "metadata": {},
    "outputs": [
@@ -78,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "38447001-be94-4df2-b101-645036c6c3a1",
    "metadata": {},
    "outputs": [
@@ -110,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "id": "f5c9059c-f2dc-4219-b5bb-f8bcea454323",
    "metadata": {},
    "outputs": [
@@ -136,7 +120,7 @@
     "###******        \n",
     "category = \"text\"\n",
     "image_file_name = \"MathTex.png\"\n",
-    "snippet = 'mob = MathTex(r\"e^x\",substrings_to_isolate=\"x\")<br>mob.set_color_by_tex(\"x\", YELLOW)'\n",
+    "snippet = 'mob = MathTex(r\"e^x\",substrings_to_isolate=\"x\") \\nmob.set_color_by_tex(\"x\", YELLOW)'\n",
     "\n",
     "image_full_name = category + \"_\" + image_file_name\n",
     "name_snippet_pairs[image_full_name] = snippet"
@@ -152,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "id": "b96dd10b-3830-4208-a2fd-7fe9e1c3e577",
    "metadata": {},
    "outputs": [],
@@ -162,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "id": "7dc0296a-ac01-4e2e-940b-71c82a5ffb77",
    "metadata": {},
    "outputs": [
@@ -175,7 +159,7 @@
       "[NbConvertApp] Making directory Mobjects_Text_files\n",
       "[NbConvertApp] Making directory Mobjects_Text_files\n",
       "[NbConvertApp] Making directory Mobjects_Text_files\n",
-      "[NbConvertApp] Writing 4112 bytes to Mobjects_Text.md\n"
+      "[NbConvertApp] Writing 3813 bytes to Mobjects_Text.md\n"
      ]
     }
    ],
@@ -185,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "id": "bda246f2-9afc-45fc-b3e6-4745465d5f4d",
    "metadata": {},
    "outputs": [],
@@ -195,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "id": "9d624a60-fd80-4156-a23f-ebb8203f3d59",
    "metadata": {},
    "outputs": [],
@@ -215,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "id": "2c4fb21e-b9f8-4c2c-838d-3da43598bde3",
    "metadata": {},
    "outputs": [
@@ -233,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "id": "e32bba63-afe6-4857-bffa-24240c9198cb",
    "metadata": {},
    "outputs": [],
@@ -250,19 +234,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 26,
    "id": "ba500ec7-c25d-4196-ac36-f7d6c3c69f32",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'image000basics_Text.png': 'mob = Text(\"Hello\", color=WHITE)',\n",
-       " 'image001text_Text.png': 'mob = Text(\"Hello\", color=WHITE)',\n",
-       " 'image002text_MathTex.png': 'mob = MathTex(r\"e^x\",substrings_to_isolate=\"x\")\\n mob.set_color_by_tex(\"x\", YELLOW)'}"
+       "{'image000text_Text.png': 'mob = Text(\"Hello\", color=WHITE)',\n",
+       " 'image001text_MathTex.png': 'mob = MathTex(r\"e^x\",substrings_to_isolate=\"x\") \\nmob.set_color_by_tex(\"x\", YELLOW)'}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,18 +256,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 27,
    "id": "ab1b24cd-ce2a-4a6c-9e8f-6718dca88478",
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('name_snippet_pairs_text.json', 'w') as fp:\n",
-    "    json.dump(new_name_snippet_pairs, fp)"
+    "    json.dump(new_name_snippet_pairs, fp,indent=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "id": "3f2e3684-d9ee-4433-af9d-717eeb711ab5",
    "metadata": {},
    "outputs": [],
@@ -295,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea5ca212-6c22-466f-9c08-18e90d4c31a6",
+   "id": "312f4676-113b-464d-b7d5-03e0c7ca3c93",
    "metadata": {},
    "outputs": [],
    "source": []
