--- a/Mobjects_Basics.ipynb
+++ b/Mobjects_Basics.ipynb
@@ -2,10 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "id": "e4ba2c91-b12e-4d60-98e6-7e51046d5745",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.10.0</span>\n",
+       "\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m10.0\u001b[0m\n",
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from manim import *\n",
     "from pathlib import Path\n",
@@ -30,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "id": "3d228c15",
    "metadata": {},
    "outputs": [
@@ -62,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "id": "ad594e35",
    "metadata": {},
    "outputs": [
@@ -95,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "id": "ce890072-a608-4654-941b-198b4dd37280",
    "metadata": {},
    "outputs": [
@@ -129,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "id": "cd2434de-f766-4d7d-9aee-af607580a62b",
    "metadata": {},
    "outputs": [
@@ -163,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "id": "78d4b603",
    "metadata": {},
    "outputs": [
@@ -196,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "id": "ca89b62d",
    "metadata": {},
    "outputs": [
@@ -230,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "id": "9075a9c7-0eff-4eea-8ce7-dc533bc54120",
    "metadata": {},
    "outputs": [
@@ -264,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "id": "bc54081a",
    "metadata": {},
    "outputs": [
@@ -297,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "id": "214af3ad-d1a0-446b-bb8d-6d02304ffaec",
    "metadata": {},
    "outputs": [
@@ -330,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 11,
    "id": "8f13d671-c505-4993-b1a2-9c61dc28c83f",
    "metadata": {},
    "outputs": [
@@ -362,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 12,
    "id": "2616b54b-98c4-4171-bec6-7e9cdf55968a",
    "metadata": {},
    "outputs": [
@@ -394,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "id": "8120aa72-aa99-4078-9859-a8fada7c9167",
    "metadata": {},
    "outputs": [
@@ -426,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "id": "f1517126-246d-4361-93fb-77d8620c5384",
    "metadata": {},
    "outputs": [
@@ -459,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 15,
    "id": "7a1d9778-4e1a-41a8-84a4-187a6550086a",
    "metadata": {},
    "outputs": [
@@ -492,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 16,
    "id": "7893fe85-5177-4e3a-8d85-728e77bf2442",
    "metadata": {},
    "outputs": [
@@ -525,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 17,
    "id": "facb7539-059f-4e30-8098-ac04b970666e",
    "metadata": {},
    "outputs": [
@@ -565,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 18,
    "id": "b96dd10b-3830-4208-a2fd-7fe9e1c3e577",
    "metadata": {},
    "outputs": [
@@ -583,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 19,
    "id": "7dc0296a-ac01-4e2e-940b-71c82a5ffb77",
    "metadata": {},
    "outputs": [
@@ -609,7 +625,7 @@
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
-      "[NbConvertApp] Writing 12249 bytes to Mobjects_Basics.md\n"
+      "[NbConvertApp] Writing 12362 bytes to Mobjects_Basics.md\n"
      ]
     }
    ],
