--- a/Mobjects_Basics.ipynb
+++ b/Mobjects_Basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e4ba2c91-b12e-4d60-98e6-7e51046d5745",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3d228c15",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ad594e35",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ce890072-a608-4654-941b-198b4dd37280",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "cd2434de-f766-4d7d-9aee-af607580a62b",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "78d4b603",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "ca89b62d",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "9075a9c7-0eff-4eea-8ce7-dc533bc54120",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "bc54081a",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "214af3ad-d1a0-446b-bb8d-6d02304ffaec",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "8f13d671-c505-4993-b1a2-9c61dc28c83f",
    "metadata": {},
    "outputs": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "2616b54b-98c4-4171-bec6-7e9cdf55968a",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "8120aa72-aa99-4078-9859-a8fada7c9167",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "f1517126-246d-4361-93fb-77d8620c5384",
    "metadata": {},
    "outputs": [
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "7a1d9778-4e1a-41a8-84a4-187a6550086a",
    "metadata": {},
    "outputs": [
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "7893fe85-5177-4e3a-8d85-728e77bf2442",
    "metadata": {},
    "outputs": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "facb7539-059f-4e30-8098-ac04b970666e",
    "metadata": {},
    "outputs": [
@@ -572,6 +572,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7e1cc4c0-2fc8-4d9a-9c02-e7542bf93ca6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = \"Mobjects_Basics\"\n",
+    "folder_name = file_name + \"_files\"\n",
+    "notebook_name = file_name + \".ipynb\"\n",
+    "markdown_name = file_name + \".md\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7150aa82-899b-49cd-bcad-344ef8bb3e9c",
    "metadata": {},
@@ -581,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "b96dd10b-3830-4208-a2fd-7fe9e1c3e577",
    "metadata": {},
    "outputs": [
@@ -589,24 +602,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rm: Mobjects_Basics_files: No such file or directory\n"
-     ]
-    }
-   ],
-   "source": [
-    "!rm -r Mobjects_Basics_files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "7dc0296a-ac01-4e2e-940b-71c82a5ffb77",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "rm: Mobjects_Basics_files: No such file or directory\n",
       "[NbConvertApp] Converting notebook Mobjects_Basics.ipynb to markdown\n",
       "[NbConvertApp] Support files will be in Mobjects_Basics_files/\n",
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
@@ -625,32 +621,35 @@
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
-      "[NbConvertApp] Writing 12362 bytes to Mobjects_Basics.md\n"
+      "[NbConvertApp] Writing 10976 bytes to Mobjects_Basics.md\n"
      ]
     }
    ],
    "source": [
-    "!jupyter nbconvert Mobjects_Basics.ipynb --to markdown"
+    "!rm -r $folder_name\n",
+    "!jupyter nbconvert $notebook_name --to markdown\n",
+    "!rm -r $markdown_name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "bda246f2-9afc-45fc-b3e6-4745465d5f4d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!rm -r Mobjects_Basics.md"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 21,
    "id": "9d624a60-fd80-4156-a23f-ebb8203f3d59",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "base_directory = Path.cwd() / \"Mobjects_Basics_files\"\n",
+    "base_directory = Path.cwd() / folder_name\n",
     "target_directory = Path.cwd() / \"images\"\n",
     "import os\n",
     "paths = sorted(Path(base_directory).iterdir(), key=os.path.getmtime)\n",
@@ -659,87 +658,21 @@
     "for num, (p,des) in enumerate(zip(paths,dest_names)):\n",
     "    to_path = target_directory /  f\"image{num:03}{des}\"   \n",
     "    shutil.copy(p,  to_path)\n",
-    "#    print(\"done\", to_path.name)\n",
-    "    new_keys.append(to_path.name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "id": "2c4fb21e-b9f8-4c2c-838d-3da43598bde3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!rm -r Mobjects_Basics_files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "id": "e32bba63-afe6-4857-bffa-24240c9198cb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    new_keys.append(to_path.name)\n",
+    "    \n",
     "new_name_snippet_pairs ={} \n",
     "new_values = list(name_snippet_pairs.values())\n",
-    "#new_new_values = []\n",
-    "#for val in new_values:\n",
-    "#    val= val.replace('\"', \"'\")\n",
-    "#    print(val)\n",
     "for key, value in zip(new_keys,new_values):\n",
-    "    new_name_snippet_pairs[key]=value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "id": "ba500ec7-c25d-4196-ac36-f7d6c3c69f32",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'image000basics_Dot.png': 'd = Dot(color = YELLOW)',\n",
-       " 'image001basics_Circle.png': 'circle = Circle(color= YELLOW)',\n",
-       " 'image002basics_Arc.png': 'mob= Arc(radius=1.3, start_angle=-PI/16, angle=PI,color= YELLOW)',\n",
-       " 'image003basics_Ellipse.png': 'mob = Ellipse(color = YELLOW)',\n",
-       " 'image004basics_Square.png': 'square = Square(color= YELLOW)',\n",
-       " 'image005basics_Star.png': 'star = Star(color = YELLOW)',\n",
-       " 'image006basics_Triangle.png': 'mob = Triangle(color = YELLOW)',\n",
-       " 'image007basics_Line.png': 'line = Line(color= YELLOW)',\n",
-       " 'image008basics_DashedLine.png': 'mob = DashedLine(color= YELLOW)',\n",
-       " 'image009basics_Arrow.png': 'mob = Arrow(color= YELLOW)',\n",
-       " 'image010basics_DoubleArrow.png': 'mob = DoubleArrow(color= YELLOW)',\n",
-       " 'image011basics_ParametricFunction.png': 'mob = ParametricFunction(lambda t: [t,0.2*np.sin(10*t),0],t_range = [-TAU, TAU],color= YELLOW)',\n",
-       " 'image012basics_CurvedArrow.png': 'mob = CurvedArrow(LEFT,RIGHT,color= YELLOW)',\n",
-       " 'image013basics_AnnotationDot.png': 'mob = AnnotationDot(fill_color=RED)',\n",
-       " 'image014basics_LabeledDot.png': 'mob = LabeledDot(Tex(\"42\", color=GREEN))',\n",
-       " 'image015basics_ManimBanner.png': 'mob = ManimBanner()'}"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_name_snippet_pairs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "id": "ab1b24cd-ce2a-4a6c-9e8f-6718dca88478",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    new_name_snippet_pairs[key]=value\n",
     "with open('name_snippet_pairs.json', 'w') as fp:\n",
-    "    json.dump(new_name_snippet_pairs, fp)"
+    "    json.dump(new_name_snippet_pairs, fp,indent=2)\n",
+    "new_name_snippet_pairs\n",
+    "os.system(f\"rm -r {folder_name}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 22,
    "id": "3f2e3684-d9ee-4433-af9d-717eeb711ab5",
    "metadata": {},
    "outputs": [],
@@ -750,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea5ca212-6c22-466f-9c08-18e90d4c31a6",
+   "id": "aefab47c-eaf8-4c12-8708-9dd2da76f325",
    "metadata": {},
    "outputs": [],
    "source": []
