--- a/Mobjects_Basics.ipynb
+++ b/Mobjects_Basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e4ba2c91-b12e-4d60-98e6-7e51046d5745",
    "metadata": {},
    "outputs": [
@@ -30,23 +30,13 @@
     "import json\n",
     "\n",
     "params = \" -v WARNING -r 80,40 -s  --disable_caching Example\"\n",
-    "\n",
-    "#def latest_file(path: Path, pattern: str = \"*\"):\n",
-    "#   files = path.glob(pattern)\n",
-    "#   return max(files, key=lambda x: x.stat().st_ctime)\n",
-    "\n",
-    "def save_image(name):\n",
-    "    #from_file = latest_file(Path(\"./media/images/mobject-gallery\"))\n",
-    "    from_file = Path(\"./media/images/mobject-gallery/Example_ManimCE_v0.10.0.png\")\n",
-    "    to_file = Path.cwd() / name\n",
-    "    shutil.copy(from_file, to_file)\n",
     "    \n",
     "name_snippet_pairs = {}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "3d228c15",
    "metadata": {},
    "outputs": [
@@ -78,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "ad594e35",
    "metadata": {},
    "outputs": [
@@ -111,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ce890072-a608-4654-941b-198b4dd37280",
    "metadata": {},
    "outputs": [
@@ -145,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "cd2434de-f766-4d7d-9aee-af607580a62b",
    "metadata": {},
    "outputs": [
@@ -179,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "78d4b603",
    "metadata": {},
    "outputs": [
@@ -212,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "ca89b62d",
    "metadata": {},
    "outputs": [
@@ -246,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "9075a9c7-0eff-4eea-8ce7-dc533bc54120",
    "metadata": {},
    "outputs": [
@@ -280,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "bc54081a",
    "metadata": {},
    "outputs": [
@@ -313,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "214af3ad-d1a0-446b-bb8d-6d02304ffaec",
    "metadata": {},
    "outputs": [
@@ -346,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "8f13d671-c505-4993-b1a2-9c61dc28c83f",
    "metadata": {},
    "outputs": [
@@ -378,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "2616b54b-98c4-4171-bec6-7e9cdf55968a",
    "metadata": {},
    "outputs": [
@@ -410,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "8120aa72-aa99-4078-9859-a8fada7c9167",
    "metadata": {},
    "outputs": [
@@ -442,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "f1517126-246d-4361-93fb-77d8620c5384",
    "metadata": {},
    "outputs": [
@@ -475,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "7a1d9778-4e1a-41a8-84a4-187a6550086a",
    "metadata": {},
    "outputs": [
@@ -508,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "7893fe85-5177-4e3a-8d85-728e77bf2442",
    "metadata": {},
    "outputs": [
@@ -541,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "facb7539-059f-4e30-8098-ac04b970666e",
    "metadata": {},
    "outputs": [
@@ -572,19 +562,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "7e1cc4c0-2fc8-4d9a-9c02-e7542bf93ca6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_name = \"Mobjects_Basics\"\n",
-    "folder_name = file_name + \"_files\"\n",
-    "notebook_name = file_name + \".ipynb\"\n",
-    "markdown_name = file_name + \".md\""
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "7150aa82-899b-49cd-bcad-344ef8bb3e9c",
    "metadata": {},
@@ -594,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "id": "b96dd10b-3830-4208-a2fd-7fe9e1c3e577",
    "metadata": {},
    "outputs": [
@@ -621,36 +598,46 @@
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
-      "[NbConvertApp] Writing 10976 bytes to Mobjects_Basics.md\n"
+      "[NbConvertApp] Writing 11814 bytes to Mobjects_Basics.md\n"
      ]
-    }
-   ],
-   "source": [
-    "!rm -r $folder_name\n",
-    "!jupyter nbconvert $notebook_name --to markdown\n",
-    "!rm -r $markdown_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "9d624a60-fd80-4156-a23f-ebb8203f3d59",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "0"
+       "{'image000basics_Dot.png': 'd = Dot(color = YELLOW)',\n",
+       " 'image001basics_Circle.png': 'circle = Circle(color= YELLOW)',\n",
+       " 'image002basics_Arc.png': 'mob= Arc(radius=1.3, start_angle=-PI/16, angle=PI,color= YELLOW)',\n",
+       " 'image003basics_Ellipse.png': 'mob = Ellipse(color = YELLOW)',\n",
+       " 'image004basics_Square.png': 'square = Square(color= YELLOW)',\n",
+       " 'image005basics_Star.png': 'star = Star(color = YELLOW)',\n",
+       " 'image006basics_Triangle.png': 'mob = Triangle(color = YELLOW)',\n",
+       " 'image007basics_Line.png': 'line = Line(color= YELLOW)',\n",
+       " 'image008basics_DashedLine.png': 'mob = DashedLine(color= YELLOW)',\n",
+       " 'image009basics_Arrow.png': 'mob = Arrow(color= YELLOW)',\n",
+       " 'image010basics_DoubleArrow.png': 'mob = DoubleArrow(color= YELLOW)',\n",
+       " 'image011basics_ParametricFunction.png': 'mob = ParametricFunction(lambda t: [t,0.2*np.sin(10*t),0],t_range = [-TAU, TAU],color= YELLOW)',\n",
+       " 'image012basics_CurvedArrow.png': 'mob = CurvedArrow(LEFT,RIGHT,color= YELLOW)',\n",
+       " 'image013basics_AnnotationDot.png': 'mob = AnnotationDot(fill_color=RED)',\n",
+       " 'image014basics_LabeledDot.png': 'mob = LabeledDot(Tex(\"42\", color=GREEN))',\n",
+       " 'image015basics_ManimBanner.png': 'mob = ManimBanner()'}"
       ]
      },
-     "execution_count": 21,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
+    "file_name = \"Mobjects_Basics\"\n",
+    "folder_name = file_name + \"_files\"\n",
+    "notebook_name = file_name + \".ipynb\"\n",
+    "markdown_name = file_name + \".md\"\n",
+    "!rm -r $folder_name\n",
+    "!jupyter nbconvert $notebook_name --to markdown\n",
+    "!rm -r $markdown_name\n",
     "base_directory = Path.cwd() / folder_name\n",
     "target_directory = Path.cwd() / \"images\"\n",
+    "target_directory.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
     "import os\n",
     "paths = sorted(Path(base_directory).iterdir(), key=os.path.getmtime)\n",
     "dest_names = list(name_snippet_pairs.keys())\n",
@@ -664,26 +651,17 @@
     "new_values = list(name_snippet_pairs.values())\n",
     "for key, value in zip(new_keys,new_values):\n",
     "    new_name_snippet_pairs[key]=value\n",
-    "with open('name_snippet_pairs.json', 'w') as fp:\n",
+    "with open(f'{file_name}.json', 'w') as fp:\n",
     "    json.dump(new_name_snippet_pairs, fp,indent=2)\n",
-    "new_name_snippet_pairs\n",
-    "os.system(f\"rm -r {folder_name}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "3f2e3684-d9ee-4433-af9d-717eeb711ab5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "display(new_name_snippet_pairs)\n",
+    "!rm -r $folder_name\n",
     "!git add ."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aefab47c-eaf8-4c12-8708-9dd2da76f325",
+   "id": "6d5aa0c7-78c8-44c5-b215-41f92570f239",
    "metadata": {},
    "outputs": [],
    "source": []
